# Argus_V

./: ESSAY_GUIDE.md  INSTALL.md  JOURNAL.md  README.md  TESTING.md  aegis-config.example.yaml  example-retina-config.yaml  install.sh  pyproject.toml  requirements.txt  test_install_package.sh  test_python.py  uninstall.sh
scripts/: create_release.sh  generate_foundation_model.py  train_nsl_kdd.py
scripts/lib/: license-checker.py
src/argus_v/aegis/: __init__.py  blacklist_manager.py  cli.py  config.py  daemon.py  feedback_manager.py  model_manager.py  prediction_engine.py
src/argus_v/licensing/: cli.py  verify.py
src/argus_v/mnemosyne/: artifact_manager.py  cli.py  config.py  data_loader.py  pipeline.py  preprocessing.py  trainer.py
src/argus_v/oracle_core/: __init__.py  anonymize.py  config.py  logging.py  schema.py  validation.py
src/argus_v/retina/: __init__.py  aggregator.py  cli.py  collector.py  config.py  csv_rotator.py  daemon.py  health_monitor.py
tests/aegis/: test_aegis_integration.py  test_aegis_prediction_flow.py  test_feedback.py  test_foundation_model.py  test_trusted_ip.py  test_xai.py
tests/mnemosyne/: test_artifact_manager.py  test_config.py  test_data_loader.py  test_pipeline.py  test_preprocessing.py  test_trainer.py
tests/retina/: test_aggregator.py  test_collector.py  test_csv_rotator.py  test_integration.py
